--- a/confirmation.html
+++ b/confirmation.html
@@ -15,7 +15,7 @@
             <p>Total Number</p>
             <p>Total price</p>
         </final>   
-     <button type="confirm" class="confirm">Submit </a></button>
+     <button type="confirm" class="confirm">Confirm </a></button>
 
     </section>
     <style>
